solve my overflow issue

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,7 @@
   font-weight: 400;
   scroll-behavior: smooth;
   &__body {
+    overflow-x: hidden;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
